Finished partially the struct printing

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 TODO:
 - Watch the Casey video and start implementing the printing and test in a small project. 
 - test reflection in the small project.	
+- Should we need the meta_type in the type_definition? since we have it already in the member definition.
 
 PROBLEMS:
 
